// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Regression LPS-85642 Should hide second operand and value when operator is reset 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline ">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" type="button" disabled="">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item hide" condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item hide" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Text Field</p>
              </div>
            </div>
            <div class="condition-type-value-date form-group-item hide" condition-type-value-date-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
            <div class="condition-type-value-select form-group-item hide" condition-type-value-select-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression LPS-85644 Should clear first operand when field is removed from pages 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline ">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" type="button" disabled="">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item hide" condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item hide" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Text Field</p>
              </div>
            </div>
            <div class="condition-type-value-date form-group-item hide" condition-type-value-date-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
            <div class="condition-type-value-select form-group-item hide" condition-type-value-select-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression should add a new condition row when addNewCondition button is clicked 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline can-remove-item">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" type="button">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item " condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item hide" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Text Field</p>
              </div>
            </div>
            <div class="condition-type-value-date form-group-item " condition-type-value-date-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
            <div class="condition-type-value-select form-group-item hide" condition-type-value-select-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value-select-options form-group-item hide" condition-type-value-select-options-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="1">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item hide" condition-type-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item hide" condition-type-value-index="1">
              <div id="fields-rule">
                <p>Text Field</p>
              </div>
            </div>
            <div class="condition-type-value-date form-group-item hide" condition-type-value-date-index="1">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
            <div class="condition-type-value-select form-group-item hide" condition-type-value-select-index="1">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="1">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression should reset and show fourth input selector when first, second and third have options selected and first selector is text field 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline ">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" type="button" disabled="">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item " condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item " condition-type-value-index="0">
              <div id="fields-rule">
                <p>Text Field</p>
              </div>
            </div>
            <div class="condition-type-value-date form-group-item hide" condition-type-value-date-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
            <div class="condition-type-value-select form-group-item hide" condition-type-value-select-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value-select-options form-group-item hide" condition-type-value-select-options-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression should show fourth "date" field when first, second and third have options selected and first selector is date 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline ">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" type="button" disabled="">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item " condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item hide" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Text Field</p>
              </div>
            </div>
            <div class="condition-type-value-date form-group-item " condition-type-value-date-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
            <div class="condition-type-value-select form-group-item hide" condition-type-value-select-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value-select-options form-group-item hide" condition-type-value-select-options-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression should show fourth "select" selector when first, second and third have options selected and first selector is select field 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline ">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" type="button" disabled="">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item " condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item hide" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Text Field</p>
              </div>
            </div>
            <div class="condition-type-value-date form-group-item hide" condition-type-value-date-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
            <div class="condition-type-value-select form-group-item hide" condition-type-value-select-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value-select-options form-group-item " condition-type-value-select-options-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Regression should show third selector when first and second selectors have options selected 1`] = `
<div class="form-builder-rule-builder liferay-ddm-form-builder-rule-builder-content">
  <h2 class="form-builder-section-title text-default">rule</h2>
  <h4 class="text-default">define-condition-and-action-to-change-fields-and-elements-on-the-form</h4>
  <ul class="liferay-ddm-form-builder-rule-condition-list liferay-ddm-form-rule-builder-timeline timeline ">
    <li class="timeline-item">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="h4 panel-title">condition</div>
          <div class="btn-group dropdown" style="">
            <button class="btn btn-default dropdown-toggle dropdown-toggle-operator text-uppercase" data-toggle="dropdown" type="button" disabled="">
              <span class="dropdown-toggle-selected-value">or</span>
              <span class="caret"></span>
            </button>
            <ul class="dropdown-menu">
              <li class="logic-operator text-uppercase" data-logical-operator-value="or">
                <a>or</a>
              </li>
              <li class="divider"></li>
              <li class="logic-operator text-uppercase" data-logical-operator-value="and">
                <a>and</a>
              </li>
            </ul>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
    </li>
    <li class="form-builder-rule-condition-container timeline-item" condition-index="0">
      <div class="panel panel-default">
        <div class="flex-container panel-body">
          <div class="form-group-autofit">
            <div class="form-group-item form-group-item-label form-group-item-shrink">
              <h4>
                <span class="text-truncate-inline">
                  <span class="text-truncate">if</span>
                </span>
              </h4>
            </div>
            <div class="condition-if form-group-item" condition-if-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-operator form-group-item" condition-operator-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type form-group-item " condition-type-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value form-group-item hide" condition-type-value-index="0">
              <div id="fields-rule">
                <p>Text Field</p>
              </div>
            </div>
            <div class="condition-type-value-date form-group-item hide" condition-type-value-date-index="0">
              <div id="fields-rule">
                <p>Date Field</p>
              </div>
            </div>
            <div class="condition-type-value-select form-group-item hide" condition-type-value-select-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
            <div class="condition-type-value-select-options form-group-item hide" condition-type-value-select-options-index="0">
              <div id="fields-rule">
                <p>Select Field</p>
              </div>
            </div>
          </div>
          <div class="timeline-increment">
            <span class="timeline-icon"></span>
          </div>
        </div>
      </div>
      <div class="operator panel panel-default panel-inline">
        <div class="panel-body text-uppercase">or</div>
      </div>
      <div class="container-trash">
        <button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button" data-index="0">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash" focusable="false">
            <title>trash</title>
            <use xlink:href="icons.svg#trash"></use>
          </svg>
        </button>
      </div>
    </li>
  </ul>
  <div class="addbutton-timeline-item">
    <div class="add-condition timeline-increment-icon">
      <button class="btn rounded-circle btn-monospaced btn-sm btn-primary" aria-label="plus" type="button">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus" focusable="false">
          <title>plus</title>
          <use xlink:href="icons.svg#plus"></use>
        </svg>
      </button>
    </div>
  </div>
  <div class="fade modal" role="dialog" tabindex="-1">
    <div class="modal-dialog modal-sm">
      <div class="modal-content">
        <div class="modal-header">
          <div class="modal-title">delete-condition</div>
          <button class="btn close btn-unstyled" aria-label="close" type="button">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-times" focusable="false">
              <title>times</title>
              <use xlink:href="icons.svg#times"></use>
            </svg>
          </button>
        </div>
        <div class="modal-body">
          <h4>are-you-sure-you-want-to-delete-this-condition</h4>
        </div>
        <div class="modal-footer">
          <div class="modal-item-first">
            <div class="btn-group"></div>
          </div>
          <div class="modal-item-last">
            <div class="btn-group">
              <div class="btn-group-item">
                <button class="btn close-modal btn-secondary" type="button">dismiss</button>
              </div>
              <div class="btn-group-item">
                <button class="btn btn-primary" type="button">delete</button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
